--- a/source/css/objects/_inputs.scss
+++ b/source/css/objects/_inputs.scss
@@ -28,8 +28,8 @@
 }
 
 
-// Inputs //
-
+// Inputs
+// ------
 .form__input {
   @include typi("t1");
 
@@ -182,8 +182,8 @@
 }
 
 
-// Buttons //
-
+// Buttons
+// -------
 .form__button {
   position: absolute;
   top: -1px;
