Fix inlining script.

--- a/templates/madebyconnor/_includes/head.html
+++ b/templates/madebyconnor/_includes/head.html
@@ -34,7 +34,7 @@
 
 {# -- LOADJS -- #}
 <script>
-  {{ source('_includes/js/loadjs.min.js') }}
+  {{ source('_inline/loadjs.min.js') }}
 </script>
 
 {# -- COMBINED JAVASCRIPT -- #}
