--- a/source/css/components/_metabar.scss
+++ b/source/css/components/_metabar.scss
@@ -2,9 +2,11 @@
 // -------
 .c-metabar {
   @include mappy-bp(medium) {
-    position: fixed;
+    .headroom {
+      position: fixed;
 
-    will-change: transform;
+      will-change: transform;
+    }
 
     .headroom--not-top & {
       padding: vr(.5) vr(1);
@@ -17,7 +19,12 @@
     }
 
     .headroom--unpinned & {
-      transform: translateY(-100%);
+      // transform: translateY(-100%);
+      opacity: 0;
+
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 
@@ -32,7 +39,7 @@
 
   padding: vr(1);
 
-  transition: box-shadow $an-short, background-color $an-short, padding $an-short, transform $an-medium;
+  transition: box-shadow $an-short, background-color $an-short, padding $an-short, transform $an-medium, opacity $an-medium, visibility $an-medium;
 
   background-color: var(--oc-white);
 
@@ -60,8 +67,8 @@
 
   vertical-align: middle;
 
-  &:hover,
-  &:focus {
+  a:hover &,
+  a:focus & {
     transform: scale(1.1);
   }
 }
@@ -81,8 +88,8 @@
 
   vertical-align: middle;
 
-  &:hover,
-  &:focus {
+  a:hover &,
+  a:focus & {
     color: oc(primary);
   }
 }
