--- a/templates/_includes/head.html
+++ b/templates/_includes/head.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
 {# -- CRITICAL CSS -- #}
-{% set newCache = rev('css/styles.min.css') %}
+{% set newCache = rev('css/' ~ entry.site.handle ~ '.min.css') %}
 
 {% if not currentCache or currentCache != newCache or devMode %}
   {{ setCookie('criticalCss', newCache, now | date_modify("+7 days").timestamp ) }}
@@ -79,8 +79,6 @@ loadjs.ready('scripts', {
       tolerance : 8,
     });
     headroom.init();
-
-    Barba.Pjax.start();
 
     {% set error = craft.app.session.getFlash('error') %}
     {% set notice = craft.app.session.getFlash('notice') %}
