--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
     {# -- HEADER -- #}
     <header class="l-ctnr">
       <div class="c-header c-header--tall l-w100">
-        <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&nbsp;</h1>
-        <h2 class="c-header__subtitle">{{ entry.description | striptags() }}</h2>
+        <h1 class="c-header__title c-header__title--color">{{ helpers.striptags(entry.title) }}&nbsp;</h1>
+        <h2 class="c-header__subtitle">{{ helpers.striptags(entry.description) }}</h2>
       </div>
     </header>
 
@@ -62,7 +62,7 @@
 
               {% if image is defined and image %}
                 <figure class="c-card__image">
-                  {{ elements.image(image, 'normal', '16x9', '42rem' ) }}
+                  {{ elements.image(image, 'normal', '21x9', '42rem' ) }}
                 </figure>
               {% endif %}
 
@@ -96,7 +96,7 @@
             {% set image = item.image[0] ?? null %}
             {% if image %}
               <figure class="c-card__image">
-                {{ elements.image(image, 'normal', '16x9', '64rem') }}
+                {{ elements.image(image, 'normal', '21x9', '64rem') }}
               </figure>
             {% endif %}
 
