--- a/templates/home.html
+++ b/templates/home.html
@@ -92,7 +92,7 @@
         {# -- HEADER -- #}
         <header class="l-ctnr l-flex l-flex--center">
           <div class="c-header l-w75">
-            <h1 id="greeting" class="c-header__title c-header__title--color">[[ greeting ]], Sir.&nbsp;</h1>
+            <h1 id="greeting" class="c-header__title c-header__title--color">[[ greeting ]], Sir.&ensp;</h1>
             <h2 class="c-header__subtitle">Today is a new opportunity.</h2>
           </div>
         </header>
@@ -150,7 +150,7 @@
           {# -- HEADER -- #}
           <header class="l-ctnr l-flex l-flex--center">
             <div class="c-header c-header--tall l-w75">
-              <h1 id="greeting" class="c-header__title c-header__title--color">Hello stranger.&nbsp;</h1>
+              <h1 id="greeting" class="c-header__title c-header__title--color">Hello stranger.&ensp;</h1>
               <h2 class="c-header__subtitle">You’ve discovered Area 51.</h2>
               <p class="c-header__meta mv2 fs-s1 ts-subtle"><a class="t-link" href="/admin/login">Login →</a></p>
             </div>
