--- a/templates/work/index.html
+++ b/templates/work/index.html
@@ -28,7 +28,7 @@
 
       {# -- HEADER -- #}
       <div class="c-header">
-        <h1 class="c-header__title c-header__title--color">{{ helpers.striptags(entry.title) }}&nbsp;</h1>
+        <h1 class="c-header__title c-header__title--color">{{ helpers.striptags(entry.title) }}&ensp;</h1>
         <h2 class="c-header__subtitle">{{ helpers.striptags(entry.description) }}</h2>
       </div>
 
