--- a/templates/_pages/entry.html
+++ b/templates/_pages/entry.html
@@ -42,7 +42,7 @@
 
       <div class="l-ctnr l-flex l-flex--center">
         <div class="c-header l-w75">
-          <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&nbsp;</h1>
+          <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&ensp;</h1>
           <h2 class="c-header__subtitle">{{ entry.description | striptags() }}</h2>
         </div>
       </div>
