--- a/templates/blog/_category.html
+++ b/templates/blog/_category.html
@@ -21,7 +21,7 @@
   {# -- HEADER -- #}
   <header class="ctnr-s mv5">
     <div class="c-header w100">
-      <h1 class="c-header__title c-header__title--color">{{"Category" | t }}&nbsp;</h1>
+      <h1 class="c-header__title c-header__title--color">{{"Category" | t }}&ensp;</h1>
       <h2 class="c-header__subtitle">{{ category | capitalize }}{% if category.description is defined %}&nbsp;—&nbsp;{{ helpers.striptags(category.description) }}{% endif %}</h2>
     </div>
   </header>
