--- a/templates/work/_entry.html
+++ b/templates/work/_entry.html
@@ -29,7 +29,7 @@
     <header>
       <div class="l-ctnr">
         <div class="c-header c-header--tall l-w100">
-          <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&nbsp;</h1>
+          <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&ensp;</h1>
           <h2 class="c-header__subtitle">{{ entry.description | striptags() }}</h2>
         </div>
       </div>
