--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
 
 
 {% block main %}
+  {% cache %}
   {% minify %}
 
   <article>
@@ -74,39 +75,6 @@
     </section>
   {% endif %}
 
-  {# -- FEATURED ITEMS -- #}
-  {% set featured = craft.entries({
-    section: 'work',
-    featured: '1',
-    passphrase: ':empty:',
-    with: ['image'],
-    limit: '3'
-  }) %}
-
-  {% if featured %}
-    <section class="l-ctnr l-flex">
-      <div class="l-w100">
-        <h3 class="c-cards__title"><a class="t-link" href="/work">Latest Work</a></h3>
-      </div>
-
-      {% for item in featured %}
-        <article class="c-card l-w100">
-          <a class="o-image--hover" href="{{ item.url }}" title="{{ item.title }} for {{ item.client.one().title }}">
-
-            {% set image = item.image[0] ?? null %}
-            {% if image %}
-              <figure class="c-card__image">
-                {{ elements.image(image, 'normal', '21x9', '64rem') }}
-              </figure>
-            {% endif %}
-
-            <h3 class="c-card__title">{{ item.title }}</h3>
-            <p class="c-card__meta">{{ item.client.one().title }}</p>
-          </a>
-        </article>
-      {% endfor %}
-    </section>
-  {% endif %}
-
   {% endminify %}
+  {% endcache %}
 {% endblock %}
