Improvements for work section.

--- a/source/css/components/_metabar.scss
+++ b/source/css/components/_metabar.scss
@@ -2,7 +2,7 @@
 // -------
 .c-metabar {
   @include mappy-bp(medium) {
-    .headroom {
+    .headroom & {
       position: fixed;
 
       will-change: transform;
