Default styling for `strong` and `em`.

--- a/source/css/base/_base.scss
+++ b/source/css/base/_base.scss
@@ -240,6 +240,14 @@ big {
   font-size: 125%;
 }
 
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
+
 time {
   display: inline-block;
 }
