--- a/templates/503.html
+++ b/templates/503.html
@@ -6,18 +6,89 @@
  # http://craftcms.com/docs/routing
  #}
 
-{% extends "_layouts/base" %}
 
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
-{% block main %}
-	<article>
-		<header class="l-ctnr l-flex l-flex--center">
-      <div class="c-header c-header--tall l-w66">
-				<h1 class="c-header__title">Bear with me please.&nbsp;🐼&nbsp;</h1>
-				<p class="c-header__subtitle">I’m currently carrying out some maintenance on my website. It will only take a minute.</p>
-			</div>
-		</header>
-	</article>
-{% endblock %}
+
+{#
+ # The base layout template
+ # ------------------------
+-#}
+
+{# -- DRY -- #}
+{% set baseUrl = craft.app.config.getGeneral.baseUrl %}
+{% set devMode = craft.app.config.getGeneral.devMode %}
+{% set livePreview = craft.app.request.isLivePreview %}
+
+{# -- COOKIES -- #}
+{% set currentCache = getCookie('criticalCss') %}
+{% set fontFaceObserver = getCookie("fontFaceObserver") %}
+{% set darkMode = getCookie("darkMode") %}
+
+{% cache %}
+{% minify %}
+
+	<!doctype html>
+	<html lang="{{ craft.app.language }}" class="{% if fontFaceObserver == 'true' %}fonts-loaded {% endif %}{% if darkMode == 'true' %} theme-dark{% endif %}">
+	<head>
+
+
+	{% block head %}
+
+	  <meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+
+		{# -- CRITICAL CSS -- #}
+		<style>
+	    {{ source(_self ~ '.min.css', ignore_missing = true) }}
+	  </style>
+
+	  {# -- TITLE -- #}
+	  <title>{% if entry is defined %}{{ entry.title }} · {% endif %}{{ siteName | split('·') | first }}</title>
+
+	  {# -- ICONS -- #}
+	  {% include '_includes/icons' %}
+
+	  <link rel="home" href="{{ siteUrl }}" />
+	{% endblock %}
+
+
+	</head>
+
+	{# -- BODY CLASS -- #}
+	<body id="js-headroom" class="503">
+	<!-- You know, rather than reading the source like a chump, you can see it all on GitHub like a champ: https://github.com/connor-baer/connorbaer.co -->
+
+
+	{% block main %}
+		<article>
+			<header class="l-ctnr l-flex l-flex--center">
+	      <div class="c-header c-header--tall l-w66">
+					<h1 class="c-header__title">Bear with me please.&nbsp;🐼&nbsp;</h1>
+					<p class="c-header__subtitle">I’m currently carrying out some maintenance on my website. It will only take a minute.</p>
+				</div>
+			</header>
+		</article>
+	{% endblock %}
+
+
+	{% block foot %}
+	  {# -- GOOGLE ANALYTICS -- #}
+	  {% if not amp is defined and not livePreview and not devMode %}
+	    <script>
+	      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	      ga('create', 'UA-37412525-7', 'auto');
+	      ga('send', 'pageview');
+	    </script>
+	  {% endif %}
+	{% endblock %}
+
+  {% endminify %}
+  {% endcache %}
+</body>
+</html>
