--- a/source/css/components/_blocks.scss
+++ b/source/css/components/_blocks.scss
@@ -287,7 +287,7 @@
 
 .c-block__image2,
 .c-block__image4 {
-  width: calc(50% - vr(.5));
+  width: calc(50% - #{vr(.5)});
 
   padding-bottom: calc(50% - #{vr(.5)});
 }
